@@ -152,6 +152,13 @@ boostfd_file::boostfd_file(
         STXXL_MSG("Warning: open()ing " << filename << " without DIRECT mode, boostfd does not support it.");
     }
 
+    if (mode & REQUIRE_DIRECT)
+    {
+        // direct mode not supported in Boost
+        STXXL_ERRMSG("Error: open()ing " << filename << " with REQUIRE_DIRECT mode, but boostfd does not support it.");
+        retrun;
+    }
+
     if (mode & SYNC)
     {
         // ???
