@@ -191,7 +191,7 @@ disk_config::disk_config()
     : size(0),
       autogrow(false),
       delete_on_exit(false),
-      direct(2),
+      direct(1),
       flash(false),
       queue(file::DEFAULT_QUEUE),
       raw_device(false),
@@ -206,7 +206,7 @@ disk_config::disk_config(const std::string& _path, uint64 _size,
       io_impl(_io_impl),
       autogrow(false),
       delete_on_exit(false),
-      direct(2),
+      direct(1),
       flash(false),
       queue(file::DEFAULT_QUEUE),
       raw_device(false),
@@ -219,7 +219,7 @@ disk_config::disk_config(const std::string& line)
     : size(0),
       autogrow(false),
       delete_on_exit(false),
-      direct(2),
+      direct(1),
       flash(false),
       queue(file::DEFAULT_QUEUE),
       raw_device(false),
@@ -248,7 +248,7 @@ void disk_config::parse_line(const std::string& line)
 
     autogrow = false;
     delete_on_exit = false;
-    direct = 2; // try DIRECT, otherwise fallback
+    direct = 1; // try DIRECT, otherwise fallback
     // flash is already set
     queue = file::DEFAULT_QUEUE;
     unlink_on_open = false;
@@ -333,11 +333,11 @@ void disk_config::parse_fileio()
             // io_impl is not checked here, but I guess that is okay for DIRECT
             // since it depends highly platform _and_ build-time configuration.
 
-            if (*p == "direct")         direct = 1; // force ON
+            if (*p == "direct")         direct = 2; // force ON
             else if (*p == "nodirect")  direct = 0; // force OFF
             else if (eq[1] == "off")    direct = 0;
-            else if (eq[1] == "on")     direct = 1;
-            else if (eq[1] == "try")    direct = 2;
+            else if (eq[1] == "try")    direct = 1;
+            else if (eq[1] == "on")     direct = 2;
             else
             {
                 STXXL_THROW(std::runtime_error,
@@ -390,13 +390,13 @@ std::string disk_config::fileio_string() const
     if (delete_on_exit)
         oss << " delete_on_exit";
 
-    // tristate direct variable: OFF, ON, TRY
+    // tristate direct variable: OFF, TRY, ON
     if (direct == 0)
         oss << " direct=off";
     else if (direct == 1)
-        oss << " direct=on";
-    else if (direct == 2)
         ; // silenced: oss << " direct=try";
+    else if (direct == 2)
+        oss << " direct=on";
     else
         assert(!"Invalid setting for 'direct' option.");
 
