@@ -30,10 +30,10 @@ int main()
     char * buffer = static_cast<char *>(stxxl::aligned_alloc<BLOCK_ALIGN>(block_size));
     memset(buffer, 0, block_size);
     const char * paths[2] = { "/tmp/data1", "/tmp/data2" };
-    stxxl::sim_disk_file file1(paths[0], file::CREAT | file::RDWR /* | file::DIRECT */, 0);
+    stxxl::sim_disk_file file1(paths[0], file::CREAT | file::RDWR | file::DIRECT, 0);
     file1.set_size(disk_size);
 
-    stxxl::sim_disk_file file2(paths[1], file::CREAT | file::RDWR /* | file::DIRECT */, 1);
+    stxxl::sim_disk_file file2(paths[1], file::CREAT | file::RDWR | file::DIRECT, 1);
     file2.set_size(disk_size);
 
     unsigned i = 0;
